@@ -12,6 +12,7 @@ Unreleased
 ## Changed
  - Block will LogError when an exception is caught from a Command being Executed.
  - WriterAudio.GetSecondsRemaining reports 0 if not playing. Thanks to KVinS.
+ - Add special case that skips variation logic for sequences that contains no elements, making no change.
 
 v3.13.6
 ======
